WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200469
option label attribute does not render on iOS
https://bugs.webkit.org/show_bug.cgi?id=200469
Summary
option label attribute does not render on iOS
Scott
Reported
2019-08-06 07:28:32 PDT
The following markup is valid and meets the criteria outlined in the HTML Living Standard: <select> <option>text label</option> <option label="option 2" value="opt2 value"></option> <option>text label</option> </select> Expectation: The second option in the select should render with a visible text label of "option 2". This expectation is met in Safari on macOS 10.14.5. Actual Result: The second option is rendered without a visible text label in iOS 12.3.1 with Safari. Test case:
https://scottaohara.github.io/tests/html-select/label-value-attrs.html
Attachments
Safari iOS/Chrome for Android/Safari macOS
(2.13 MB, image/png)
2023-02-06 14:54 PST
,
Anthony Ricaud
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-08-06 09:30:06 PDT
<
rdar://problem/53989128
>
Anthony Ricaud
Comment 2
2023-02-06 14:54:23 PST
Created
attachment 464876
[details]
Safari iOS/Chrome for Android/Safari macOS Adding a screenshot of the testcase. Notice that iOS Safari uses the label for the <select> widget but not for the options.
Karl Dubost
Comment 3
2023-02-06 22:50:26 PST
I wonder if the text is in fact here, but just not visible, maybe transparent? Or maybe it is indeed just missing.
Karl Dubost
Comment 4
2023-02-06 23:03:34 PST
In
https://scottaohara.github.io/tests/html-select/label-value-attrs.html
> However, a visible text label fails to load with:
>
> Firefox 68.0.1 on macOS and Windows > iOS Safari 12.3.1
Note: It was fixed in Firefox on macOS at least.
Aditya Keerthi
Comment 5
2023-05-18 17:47:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14047
EWS
Comment 6
2023-05-18 21:42:53 PDT
Committed
264229@main
(a232aa69a5c6): <
https://commits.webkit.org/264229@main
> Reviewed commits have been landed. Closing PR #14047 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug